--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,6 +8,17 @@
 
 <div class="clear"></div>
 
+<p>
+<!-- FAVOURITE SECTION -->
+<!-- If there is a record in the Favourite model -->
+<% if @favourite %>
+  <%= link_to "Remove from your Favourites", post_favourite_path(@post,@favourite), method: :delete %>
+<!-- If there is no record -->
+<% else %>
+  <%= link_to "Add to Favourites", post_favourites_path(@post), method: :post %>
+<% end %>
+
+<!-- COMMENTS SECTION STARTS -->
 <h2>Add a Comment</h2>
 
 <%= form_for @comment, url: post_comments_path(@post) do |f| %>
@@ -22,6 +33,20 @@
   <tr>
   <td><%= item.body %></td>
   <td><%= item.updated_at %></td>
+  <td>
+    Published by 
+    <% if item.user_id %>
+      <% u = User.find item.user_id %>
+      <%= u.first_name %> <%= u.last_name %>
+    <% else %>
+      Unknown
+    <% end %>
+  </td>
+
+
+
+
+
   <td><%= button_to "Edit", edit_post_comment_path(@post,item), method: :get %></td>
   <td><%= button_to "Delete Comment", post_comment_path(@post,item), method: :delete, data: {confirm: "Are you sure?"} %></td>
   </tr>
