Added feature for tagging blog posts with categories

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,6 +12,10 @@
   <p>
   <%= f.label :body %>
   <%= f.text_area :body %>
+
+  <p>
+  <%= f.collection_check_boxes :tag_ids, Tag.all, :id, :name %>
+
   <p>
   <%= f.submit %>
 <% end %>
