--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,9 @@
 
 <p><%= @post.body %>
 
+<!-- ACTIONS -->
+<h2>Actions</h2>
+
 <p><%= button_to "Edit", edit_post_path(@post), method: :get %>
 
 <p><%= button_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure?"} %>
