Added page for editing tags. Created a way to display tags for each blog entry.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,9 @@
 <h1><%= @post.title %></h1>
 
+<!-- Show the list of tags -->
+<p>Tags: <%= @tags_string %>
+
+
 <p><%= @post.body %>
 
 <!-- ACTIONS -->
