--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,12 +32,13 @@
     <!-- current_user is a method from Devise -->
       Hello, <%= current_user.name_display %> [<%= link_to "Log Out", destroy_user_session_path, method: :delete %>]
       <br><%= link_to "My Favourites", favourites_path %>
+      <br><%= link_to "Tag Management", tags_path %>
     <% else %>
       <%= link_to "Log In", new_user_session_path %> |
       <%= link_to "Register", new_user_registration_path %>
     <% end %>
   </div>
-  
+
 </div>
 
 <div class="clear"></div>
