--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -40,7 +40,7 @@
   <td class="cell-action">
     <%#= link_to "Edit", edit_post_path(item), class: "edit-link-table" %>
     <%= button_to "Edit", edit_post_path(item), method: :get %>
-    <%= button_to "Delete", post_path(item), method: :delete, data: {confirm: "Are you sure?"}, class: "button-delete" %>
+    <%= button_to "Delete", post_path(item), method: :delete, data: {confirm: "Are you sure?"} %>
   </td>
 
   </tr>
