--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,37 +25,23 @@
   <%= link_to "Add to Favourites", post_favourites_path(@post), method: :post %>
 <% end %>
 
-<!-- COMMENTS SECTION STARTS -->
+<!-- COMMENTS - CREATE -->
+
 <h2>Add a Comment</h2>
 
-<%= form_for @comment, url: post_comments_path(@post) do |f| %>
-  <%= f.text_area :body, class: "comment" %>
-  <%= f.submit "Submit Comment" %>
+<% if current_user %>
+  <div id="form-comment">
+    <%= render "/comments/form" %>
+  </div>
+<% else %>
+  <p>You must log in to add a comment</p>
 <% end %>
 
 <h2>Comments</h2>
 
-<table>
+<!-- COMMENTS - DISPLAY -->
+<table id="list-comments">
 <% @post.comments.order(created_at: :desc).each do |item| %>
-  <tr>
-  <td><%= item.body %></td>
-  <td><%= item.updated_at %></td>
-  <td>
-    Published by 
-    <% if item.user_id %>
-      <% u = User.find item.user_id %>
-      <%= u.first_name %> <%= u.last_name %>
-    <% else %>
-      Unknown
-    <% end %>
-  </td>
-
-
-
-
-
-  <td><%= button_to "Edit", edit_post_comment_path(@post,item), method: :get %></td>
-  <td><%= button_to "Delete Comment", post_comment_path(@post,item), method: :delete, data: {confirm: "Are you sure?"} %></td>
-  </tr>
+  <%= render partial: "/comments/comment", locals: {item: item} %>
 <% end %>
 </table>
