--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,10 @@
-<h1>
-I am an index page
-</h1>
+<h1>Welcome to Pixel Monster</h1>
+
+<p>This is my blog management application written in Ruby on Rails. You can...
+
+<ul>
+  <li>Post, edit, and delete blog posts and comments.</li>
+  <li>Limit editing and delting to logged in users</li>
+  <li>Manage your blog tags</li>
+  <li>Notify post authors about new comments via email. These emails are queued as delayed jobs.</li>
+</ul>
