--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -14,6 +14,8 @@
   <%= f.text_area :body %>
 
   <p>
+  Blog tags:
+  <p>
   <%= f.collection_check_boxes :tag_ids, Tag.all, :id, :name %>
 
   <p>
